# refgen-core

./: .env.example  .gitignore  Makefile  README.md  docker-compose.mcp.yml  docker-compose.yml
docker/: dx.Dockerfile  postgres-init.sql  svc-base.Dockerfile
docker/db-mcp-mane/: Dockerfile  mane_exons.js
docs/: dx-yapisi-ve-goc.md  mimari-vizyon.md
libs/svc_base/: pyproject.toml
libs/svc_base/svc_base/: __init__.py  app.py  audit.py  auth.py  config.py  db.py  errors.py  health.py  licensing.py  logging.py  mcp_client.py  metering.py  tenancy.py  versioning.py
libs/svc_base/tests/: test_audit.py  test_authz.py  test_licensing.py  test_mcp_client.py  test_metering.py  test_tenancy.py  test_versioning.py
migrations/: alter_panels_versioning.sql  migrate_panels.py  migrate_users.py
services/_template/: Dockerfile  README.md  pyproject.toml
services/_template/app/: config.py  db.py  main.py
services/_template/app/api/: routes.py
services/_template/app/domain/: services.py
services/_template/app/models/: schemas.py
services/_template/tests/: test_health.py
services/design-svc/: Dockerfile
services/design-svc/app/: api.py  config.py  main.py  models.py  pipeline.py  schemas.py  seed_recipes.py  steps.py
services/design-svc/tests/: conftest.py  test_design.py  test_pipeline.py
services/gateway/: Dockerfile
services/gateway/app/: config.py  main.py
services/identity-svc/: Dockerfile
services/identity-svc/app/: api.py  config.py  domain.py  main.py  models.py  schemas.py
services/panels-svc/: Dockerfile
services/registry-svc/: Dockerfile
(+18 files in other folders)
