[project]
name = "svc-base"
version = "0.2.0"
description = "Shared barebone framework for refgen-core microservices"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pyjwt==2.10.1",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "httpx==0.28.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["svc_base*"]
