[project]
name = "template-svc"
version = "0.1.0"
description = "Service template for refgen-core (copy to start a new service)"
requires-python = ">=3.9"
dependencies = [
    "svc-base",
    "sqlalchemy==2.0.36",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "httpx==0.28.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
